SERVER-73266 Avoid retaking RSTL without timeout at index build commit